2005-10-28  Tim-Philipp Müller  <tim at centricular dot net>

	* src/htdocs/bugs/bugs.xsl:
	  Add 'create bug' row for each component.

2005-10-25  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.7.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	  Release gst-ffmpeg 0.8.7 "Redneck soup".

2005-10-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/www-update:
	* src/htdocs/bugs/bugs.xml:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/releases/gst-plugins-bad/0.9.4.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-base/0.9.4.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.9.4.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.9.4.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:
	* src/htdocs/releases/gst-python/0.9.4.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	* src/htdocs/releases/gstreamer/0.9.4.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	  releasing 0.9.4 packages

2005-10-21  Andy Wingo  <wingo@pobox.com>

	* src/htdocs/news/status.xml (http): dump

2005-10-13  Andy Wingo  <wingo@pobox.com>

	* src/htdocs/news/status.xml (http): dump

2005-10-05  Andy Wingo  <wingo@pobox.com>

	* src/htdocs/news/status.xml: sump.

2005-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	  releasing

2005-10-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gst-ffmpeg/Makefile.am:
	* src/htdocs/releases/gst-ffmpeg/0.9.3.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-base/0.9.3.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.9.3.xml: