@@ -1,3 +1,7 @@
+2005-10-31  Andy Wingo  <wingo@pobox.com>
+
+	* src/htdocs/news/status.xml: dump
+
 2005-10-28  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* src/htdocs/bugs/bugs.xsl:
